# passengersim

./: .gitignore  .pre-commit-config.yaml  LICENSE  mkdocs.yml  pyproject.toml
docs/.overrides/: 404.html  home.html
docs/.scripts/: _execute_notebooks.py  _generate_ref_pages.py
docs/API/: summary.md
docs/Tutorials/: index.md
docs/user-guide/: experiments.ipynb  gt-server.md  how-it-works.md  installation.md  untruncation.md  writing-configs.md
passengersim/: __init__.py  _logging.py  callbacks.py  contrast.py  core.py  driver.py  experiments.py  mp_driver.py  mp_driver2.py  scoring.py  snapshot.py  summary.py  types.py
passengersim/cli/: info.py  run.py
passengersim/clones/: path.py
passengersim/config/: __init__.py  airlines.py  base.py  blf_curves.py  booking_curves.py  carriers.py  choice_model.py  circuity_rules.py  database.py  demands.py  fares.py  frat5_curves.py  legs.py  manipulate.py  markets.py  named.py  optional_literal.py  outputs.py  places.py  pretty.py  rm_steps.py  rm_systems.py  simulation_controls.py  snapshot_filter.py  todd_curves.py
passengersim/database/: common_queries.py  database.py  tables.py
passengersim/extra/: forecast_viz.py  leg_load_factors.py
passengersim/iterators/: __init__.py  demand.py  fare.py
passengersim/networks/: 3mkt-2carrier.yaml  3mkt-alt.yaml  3mkt-aw-temp.yaml  3mkt-aw.yaml  3mkt-logit.yaml  3mkt-old.yaml  3mkt-simple.yaml  3mkt.yaml  3mkt01.yaml  standard-frat5.yaml  standard-rm-systems.yaml
passengersim/reporting/: contrast.py  html.py  report.py
passengersim/rm_steps/: __init__.py
passengersim/summaries/: __init__.py  bid_price_history.py  carriers.py  cp_segmentation.py  dashboard.py  demand_to_come.py  demands.py  displacement_history.py  edgar.py  fare_class_mix.py  forecasts.py  generic.py  legbuckets.py  legs.py  local_and_flow_yields.py  pathclasses.py  pathlegs.py  paths.py  segmentation_by_timeframe.py  segmentation_detail.py  tools.py
passengersim/tracers/: __init__.py  bid_price.py  forecasts.py  generic.py  welford.py
passengersim/transforms/: __init__.py  booking_classes.py  demands.py
passengersim/utils/: altair_tools.py  caffeine.py  colors.py  compression.py  file_freshness.py  filenaming.py  iframe.py  import_tool.py  kvstore.py  multiproc.py  nested_dict.py  regression_testing.py  seaborn.py  show_dir.py  si.py  targets.py
src/passengersim/: __init__.py  _demo.py  _logging.py  contrast.py  core.py  experiments.py  file_ops.py  mp_driver.py  mp_executor.py  progressbar.py  pseudonym.py  render_for_publication.py
tests/: .gitignore  conftest.py  test_3mkt.py  test_3mkt_01.py  test_3mkt_08.py  test_3mkt_dp.py  test_3mkt_hybrid.py  test_3mkt_probp.py  test_3mkt_retrospective.py  test_booked_load_factor_action.py  test_callback_rm.py  test_callbacks.py  test_choice_model_deprecation.py  test_config.py  test_config_reading.py  test_connection_builder.py  test_continuous_pricing.py  test_demand_reference_price.py  test_experiments.py  test_heatmap.py  test_io.py  test_loader.py  test_manual_paths_migration.py  test_multiprocessing.py  test_probp_disassembly.py  test_simulation_setup.py  test_summaries.py  test_todd_curves.py  test_tracers.py  test_transform_booking_classes.py  test_utils_filenaming.py  test_welford.py  test_yaml_parts_roundtrip.py
tests/std_rm_systems/: 3mkt_EE.ipynb  3mkt_EE.py  3mkt_ME.ipynb  3mkt_PE.ipynb  3mkt_PE.py  3mkt_UE.ipynb  3mkt_UE.py  test_3mkt_CE.py  test_3mkt_EE.py  test_3mkt_KE.py  test_3mkt_ME.py  test_3mkt_PE.py  test_3mkt_QE.py  test_3mkt_QuE.py  test_3mkt_UE.py
tests/test_3mkt/: test_3mkt.orig.yml  test_3mkt.yml  test_3mkt_2carrier.yml
tests/test_3mkt_01/: bookings_by_timeframe.csv  carriers.csv  fare_class_mix.csv  fig_carrier_load_factors.csv  fig_carrier_mileage.csv  fig_carrier_revenues.csv  fig_carrier_yields.csv  fig_fare_class_mix.csv  fig_leg_forecasts.csv  fig_od_fare_class_mix.csv  leg_forecasts.csv  leg_local_fraction_distribution.csv  load_factor_data.csv  load_factor_distribution.csv  raw_fare_class_mix.csv  segmentation_by_timeframe.csv  test_3mkt_01_fig_bookings_by_timeframe_AL1_False_.csv  test_3mkt_01_fig_bookings_by_timeframe_AL1_True_.csv  test_3mkt_01_fig_bookings_by_timeframe_False_False_.csv  test_3mkt_01_fig_bookings_by_timeframe_False_True_.csv  test_3mkt_01_fig_bookings_by_timeframe_False_Y5_.csv  test_3mkt_01_fig_bookings_by_timeframe_True_False_.csv  test_3mkt_01_fig_bookings_by_timeframe_True_True_.csv  test_3mkt_01_fig_load_factor_grouped_AL1_.csv  test_3mkt_01_fig_load_factor_grouped_False_.csv  test_3mkt_01_fig_load_factor_grouped_True_.csv  test_3mkt_01_fig_load_factor_grouped_db_AL1_.csv  test_3mkt_01_fig_load_factor_grouped_db_False_.csv  test_3mkt_01_fig_load_factor_grouped_db_True_.csv  test_3mkt_01_fig_load_factor_grouped_leg_avg_AL1_.csv  test_3mkt_01_fig_load_factor_grouped_leg_avg_False_.csv  test_3mkt_01_fig_load_factor_grouped_leg_avg_True_.csv  test_3mkt_01_fig_load_factor_grouped_raw_AL1_.csv  test_3mkt_01_fig_load_factor_grouped_raw_False_.csv  test_3mkt_01_fig_load_factor_grouped_raw_True_.csv
tests/test_3mkt_08/: bookings_by_timeframe.csv  bookings_by_timeframe_1.csv  bookings_by_timeframe_2.csv  bookings_by_timeframe_3.csv  carriers.csv  demand_to_come.csv  fare_class_mix.csv  fig_carrier_load_factors.csv  fig_carrier_mileage.csv  fig_carrier_revenues.csv  fig_carrier_yields.csv  fig_fare_class_mix.csv  fig_od_fare_class_mix.csv  load_factor_data.csv  load_factor_distribution.csv  raw_fare_class_mix.csv  segmentation_by_timeframe.csv  test_3mkt_08_fig_bookings_by_timeframe_AL1_False_.csv  test_3mkt_08_fig_bookings_by_timeframe_AL1_True_.csv  test_3mkt_08_fig_leg_forecasts_mu_.csv  (+43 more)
(+2301 files in other folders)
