# pyproject.toml
[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools_scm[toml]>=7.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.404"
write_to = "src/passengersim/_version.py"
search_parent_directories = true

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)"
serialize = ["{major}.{minor}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[project]
name = "passengersim"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.12",
]
license = "BSD-3-Clause"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "addicty",
    "altair>=5.0",
    "dill",
    "docutils",
    "joblib",
    "lz4",
    "numpy>=2.4,<2.5",
    "ortools",
    "pandas>=2.3.3,<3.0",
    "pydantic>=2.7",
    "pyyaml",
    "scipy",
    "typer",
    "xmle>=0.1.27",
]

[project.optional-dependencies]
test = [
    "pytest-regressions ~=2.4",
]
lab = [
    "jupyterlab>=4.4.5",
    "ipywidgets>=8.1.7",
]
mapping = [
    "geopandas>=1.1.1",
    "vega-datasets>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["passengersim*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["passengersim.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
passengersim = [
    "networks/*.yaml",
    "networks/us25/*.pxsim",
]

[metadata]
description = "User interface for PassengerSim"
author = "PassengerSim LLC"

[tool.ruff]
fix = true
line-length = 120
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint]
ignore = ["B905"]
select = ["E", "F", "B", "UP", "TID", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["passengersim"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]  # Ignore import violations in all `__init__.py` files
"*.ipynb" = ["T20", "F401"]  # Ignore missing docstrings, allow extra imports in Jupyter Notebooks

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-n auto --dist loadfile --durations=0 --durations-min=1.0"
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
]
markers = [
    "skip_until: Skip this test until a specific date",
]

[project.scripts]
paxlab = "jupyterlab.labapp:main"
